Test2/Demo/mdapipkg/unpackaged/objects/Task__c.object
<CustomObject>
    <fields>
        <fullName>Actual_End_Date__c</fullName>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Start_Date__c</fullName>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_End_Date__c</fullName>
        <label>Expected End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Start_Date__c</fullName>
        <label>Expected Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Task_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Create Design</fullName>
                </value>
                <value>
                    <fullName>Self-Review Design</fullName>
                </value>
                <value>
                    <fullName>Correct Design</fullName>
                </value>
                <value>
                    <fullName>Review Design</fullName>
                </value>
                <value>
                    <fullName>Fixbug</fullName>
                </value>
                <value>
                    <fullName>Read Design</fullName>
                </value>
                <value>
                    <fullName>Code</fullName>
                </value>
                <value>
                    <fullName>Self-Review Code</fullName>
                </value>
                <value>
                    <fullName>Correct Code</fullName>
                </value>
                <value>
                    <fullName>Review Code</fullName>
                </value>
                <value>
                    <fullName>Create testcase</fullName>
                </value>
                <value>
                    <fullName>Self-Review testcase</fullName>
                </value>
                <value>
                    <fullName>Correct testcase</fullName>
                </value>
                <value>
                    <fullName>Review testcase</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>Re-test</fullName>
                </value>
                <value>
                    <fullName>Create Deploy Doc</fullName>
                </value>
                <value>
                    <fullName>Self-Review Deploy Doc</fullName>
                </value>
                <value>
                    <fullName>Correct Deploy Doc</fullName>
                </value>
                <value>
                    <fullName>Review Deploy Doc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <label>Task Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Investigate</fullName>
                </value>
                <value>
                    <fullName>Code</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>Deploy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_of_Project__c</fullName>
        <label>Task of Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Task of Project</relationshipLabel>
        <relationshipName>Task_of_Project</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sfID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>sfID</label>
        <type>Text</type>
    </fields>
    <label>Task</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TSK{00000}</displayFormat>
        <label>Task ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <recordTypes>
        <fullName>Code</fullName>
        <active>false</active>
        <label>Code</label>
    </recordTypes>
    <recordTypes>
        <fullName>Deploy</fullName>
        <active>false</active>
        <label>Deploy</label>
    </recordTypes>
    <recordTypes>
        <fullName>Design</fullName>
        <active>true</active>
        <label>Design</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fixbug</fullName>
        <active>false</active>
        <label>Fixbug</label>
    </recordTypes>
    <recordTypes>
        <fullName>Testcase</fullName>
        <active>false</active>
        <label>Testcase</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>